--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   </head>
   <body>
     <div class="webgl-content">
-      <div id="unityContainer" style="width: 1200px; height: 800"></div>
+      <div id="unityContainer" style="width: 1200px; height: 800px"></div>
       <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
-        <div class="title">WebGl Example</div>
+        <div class="title">WebGl For The Virtual Submarine</div>
       </div>
     </div>
   </body>
